[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspa"
version = "0.1.0"
description = "Kaspa Python SDK"
requires-python = ">=3.8"
readme = "README.md"
license = "ISC"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = []

[project.urls]
"Source" = "https://github.com/kaspanet/rusty-kaspa/tree/master/python"

[package.metadata.maturin]
name = "kaspa"
description = "Kaspa Python SDK"

[tool.maturin]
name = "kaspa"
bindings = "pyo3"
features = ["pyo3/extension-module"]
strip = true