[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspa"
version = "1.0.1.post2"
description = "Kaspa Python SDK"
requires-python = ">=3.9,<=3.14"
readme = "README.md"
license = "ISC"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = []

[project.urls]
"Source" = "https://github.com/aspectron/rusty-kaspa/tree/python/python"
"Changelog" = "https://github.com/aspectron/rusty-kaspa/tree/python/python/CHANGELOG.md"

[package.metadata.maturin]
name = "kaspa"
description = "Kaspa Python SDK"

[tool.maturin]
name = "kaspa"
bindings = "pyo3"
features = [
    "pyo3/extension-module",
    "py-sdk",
]
strip = true
include = [
    "LICENSE",
    "CHANGELOG.md"
]