[package]
name = "rothschild"
description = "Kaspa Transaction Generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kaspa-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-addresses.workspace = true
kaspa-txscript.workspace = true
kaspa-utils.workspace = true

clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
rayon.workspace = true
parking_lot.workspace = true
num_cpus.workspace = true