[package]
name = "rothschild"
description = "Kaspa Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keryx-addresses.workspace = true
keryx-consensus-core.workspace = true
keryx-core.workspace = true
keryx-grpc-client.workspace = true
keryx-notify.workspace = true
keryx-rpc-core.workspace = true
keryx-txscript.workspace = true
keryx-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
