[package]
name = "simpa"
description = "Kaspa Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
kaspa-consensus-core.workspace = true
kaspa-consensus-notify.workspace = true
kaspa-consensus.workspace = true
kaspa-core.workspace = true
kaspa-database.workspace = true
kaspa-hashes.workspace = true
kaspa-perf-monitor.workspace = true
kaspa-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "kaspa-alloc/heap"]
semaphore-trace = ["kaspa-utils/semaphore-trace"]
