[package]
name = "simpa"
description = "Kaspa Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keryx-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
keryx-consensus-core.workspace = true
keryx-consensus-notify.workspace = true
keryx-consensus.workspace = true
keryx-core.workspace = true
keryx-database.workspace = true
keryx-hashes.workspace = true
keryx-perf-monitor.workspace = true
keryx-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
flate2.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json.workspace = true
serde.workspace = true
faster-hex.workspace = true
keryx-testing-integration.workspace = true


[features]
heap = ["dhat", "keryx-alloc/heap"]
semaphore-trace = ["keryx-utils/semaphore-trace"]

[lints]
workspace = true
