[package]
name = "test_sync_state_notifications"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
log.workspace = true

tokio.workspace = true