[package]
name = "kaspa-utils"
description = "Kaspa utilities"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap = { workspace = true, optional = true }
async-channel.workspace = true
borsh.workspace = true
cfg-if.workspace = true
event-listener = { workspace = true, optional = true }
faster-hex.workspace = true
ipnet = { workspace = true }
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot = { workspace = true, optional = true }
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
triggered = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde", "js"], optional = true }
wasm-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rlimit = { workspace = true, optional = true }

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "bench"
harness = false

[features]
default = ["std", "sync", "mem_size", "sim", "triggers", "hashmap", "peer-id"]
std = ["async-channel/std", "borsh/std","faster-hex/std", "ipnet/std", "itertools/use_std", "log/std", "once_cell/std", "serde/std", "sha2/std", "thiserror/std", "uuid/std", "wasm-bindgen/std"]

semaphore-trace = []
sync = ["std", "dep:event-listener"]
mem_size = ["std", "dep:parking_lot"]
triggers = ["std", "dep:triggered"]
fd_budget = ["std", "dep:rlimit"]
sim = ["std"]
hashmap = ["std"]
expiring-cache = ["std", "dep:arc-swap"]
peer-id = ["std", "dep:uuid"]

[lints]
workspace = true
